--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.datica</groupId>
 	<artifactId>java-war-deploy-example</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<version>0.2-SNAPSHOT</version>
 	<name>Demowar</name>
 
@@ -30,7 +30,7 @@
 									<groupId>com.github.jsimone</groupId>
 									<artifactId>webapp-runner</artifactId>
 									<version>8.5.20.1</version>
-									<destFileName>webapp-runner.jar</destFileName>
+									<destFileName>webapp-runner.war</destFileName>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
